--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fathima & Muhammed - Wedding Updates</title>
+  <title>Safa & Anas - Wedding Updates</title>
   
   <!-- Stylesheet -->
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="logo.png">
+
 </head>
 <body>
 
@@ -17,18 +19,19 @@
 
   <!-- MAIN CONTENT -->
   <header class="header">
-    <p class="invitation-text">Your Invited Wedding of</p>
+    <p class="invitation-text">You are Invited to the Wedding of</p>
     <h2 class="couple-name">Fathima Safa &amp; Muhammed Anas</h2>
     <img src="ring.svg" alt="Wedding Ring" class="ring-image">
     <div class="datebg">
-    <p class="date-info">25 May 2025 | 11:00 AM</p>
-    </header></div>
-  </header>
+      <p class="date-info">25 May 2025 | 11:00 AM</p>
+    </div>
+    </header>
+    
 
   <main class="main-content">
     <!-- COUNTDOWN TIMER -->
     <section class="countdown-section">
-      <h3>Countdown to the Big Day</h3>
+      <h3>Countdown to the Beginning</h3>
       <div id="countdown" class="countdown-timer">
         <div class="time-box">
           <span id="days">00</span>
@@ -50,14 +53,12 @@
 
 
 
-<!-- Popup Modal -->
-<div id="popup" class="popup">
-  <div class="popup-content">
-    <h2>🎉 You're Invited!</h2>
-    <p>Join us in celebrating our special day! 💍</p>
-    <button onclick="closePopup()">Let's Go!</button>
-  </div>
-</div>
+
+
+
+
+
+
 
 
 
@@ -67,17 +68,27 @@
 <!-- CALL AND LOCATION BUTTONS TOGETHER -->
 <section class="call-location-wrapper">
   <a class="call-button" href="tel:+919946206353">Call Us</a>
-  <a class="location-button" href="https://maps.google.com/?q=Your+Wedding+Location" target="_blank" rel="noopener noreferrer">Location</a>
+  <a class="location-button" href="https://maps.app.goo.gl/irsyiWiADf8N5zmw9" target="_blank" rel="noopener noreferrer">Location</a>
 </section>
 </section>
 <section class="fun-terms">
   <h2>Terms & Conditions</h2>
-  <ul>
-    <li> ബിരിയാണിക്ക് പപ്പടം ചോദിക്കരുത് 😁</li>
-    <li> ബിരിയാണിക്ക് പപ്പടം ചോദിക്കരുത് </li>
-  </ul>
+<ul>
+  <li>ബിരിയാണിക്ക് പപ്പടം ചോദിക്കരുത് 😁</li>
+  <li>സമയത്ത് എത്താൻ ശ്രമിക്കുക</li>
+  <li>പുത്തൻ ചിരിയോടെ വരണം</li>
+</ul>
+
 </section>
   </main>
+  <!-- Popup Modal -->
+<div id="popup">
+  <div class="popup-content">
+    <h2 class="popup-heading">Loading...</h2>
+    <p class="popup-text">Please wait...</p>
+    <button onclick="closePopup()">Close</button>
+  </div>
+</div>
   <footer>
     Made with ❤️ for Safa & Anas
   </footer>
