--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Safa & Anas - Wedding Updates</title>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Safa & Ana - Wedding Updates</title>
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="style.css">
+  </head>
   
-  <!-- Stylesheet -->
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" type="image/png" href="logo.png">
-
-</head>
 <body>
 
   <!-- SPLASH SCREEN -->
@@ -74,9 +72,9 @@
 <section class="fun-terms">
   <h2>Terms & Conditions</h2>
 <ul>
-  <li>ബിരിയാണിക്ക് പപ്പടം ചോദിക്കരുത് 😁</li>
-  <li>സമയത്ത് എത്താൻ ശ്രമിക്കുക</li>
-  <li>പുത്തൻ ചിരിയോടെ വരണം</li>
+  <li>Loading......</li>
+  <li>Loading......</li>
+  <li>Loading......</li>
 </ul>
 
 </section>
